@@ -313,7 +313,7 @@ namespace Mono.TextEditor
 		static int PasteFrom (Clipboard clipboard, TextEditorData data, bool preserveSelection, int insertionOffset)
 		{
 			int result = -1;
-			if (data.Document.ReadOnly)
+			if (data.CanEdit (data.Document.OffsetToLineNumber (insertionOffset)))
 				return result;
 			clipboard.RequestText (delegate (Clipboard clp, string text) {
 				data.Document.BeginAtomicUndo ();
